# mandoline

./: .gitignore  Cargo.toml  Justfile  README.md  check-prereqs.sh
.cargo/: config
.github/workflows/: ci.yaml  rust.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  graph_writer.rs  main.rs  svg.rs
crates/mesh/: Cargo.toml  README.md
crates/mesh/src/: geometry.rs  lib.rs  vertex_index.rs
crates/mesh/tests/: README.md  vertex_index.rs
crates/slicer/: Cargo.toml
crates/slicer/src/: config.rs  contour.rs  graph_writer.rs  lib.rs  slicer.rs
crates/stl/: Cargo.toml
crates/stl-loader/: Cargo.toml
crates/stl-loader/src/: lib.rs
crates/stl-loader/tests/: integration.rs
crates/stl-viewer/: Cargo.toml
crates/stl-viewer/res/: cube-bin.stl
crates/stl-viewer/src/: lib.rs  main.rs
crates/stl/src/: lib.rs
crates/stl/tests/: integration.rs
crates/test-data/: Cargo.toml
crates/test-data/src/: lib.rs
models/cube/: cube.scad
res/calibration-cube/: cube-ascii.stl  cube-bin.stl  cube.scad
res/cube/: cube.scad
stl-loader/: Cargo.toml
stl-loader/scripts/: rebuild-stls.sh
stl-loader/src/: lib.rs
stl-loader/tests/: integration.rs
stl-viewer/: Cargo.toml  build.rs
stl-viewer/pkg/: index.html
stl-viewer/src/: lib.rs  main.rs  resources.rs  stl.wgsl
