[package]
name = "stl-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
bytemuck_derive = "1.4.1"
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.3.0"
wgpu = "0.16.0"
winit = "0.28.6"
zerocopy = "0.6.1"
stl-loader = { path = "../stl-loader" }