[package]
name = "stl-viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
log = "0.4.17"
pollster = "0.3.0"
wgpu = "0.16.0"
winit = "0.28.6"
stl-loader = { path = "../stl-loader" }
cgmath = "0.18.0"
bytemuck_derive = "1.4.1"
bytemuck = "1.13.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.16", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
