[package]
name = "mandoline-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = [ "derive" ] }
mandoline = { path = "../slicer" }
mandoline-mesh = { path = "../mesh" }
mandoline-stl = { path = "../stl" }
tempfile = "3.6.0"

