[package]
name = "mesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
static_assertions = "1.1.0"
# TODO: Ideally we can invert the dependency such that stl-loader can
# vend a mesh.
stl-loader = { path = "../stl-loader" }