[package]
name = "stl-viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
log = "0.4.17"
pollster = "0.3.0"
wgpu = "0.16.0"
winit = "0.28.6"
mesh = { path = "../mesh" }
stl-loader = { path = "../stl-loader" }
cgmath = "0.18.0"
bytemuck_derive = "1.4.1"
bytemuck = "1.13.1"
anyhow = "1.0.71"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1"
reqwest = { version = "0.11" }
wgpu = { version = "0.16", features = ["webgl"]}
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[build-dependencies]
anyhow = "1.0.71"
fs_extra = "1.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
